Fixed the spacing issue between owners and the owner section and tags

--- a/src/Bootstrap/less/theme/page-display-package-v2.less
+++ b/src/Bootstrap/less/theme/page-display-package-v2.less
@@ -239,8 +239,10 @@
   }
 
   .owner-list {
+    margin-bottom: 40px;
+
     li {
-      margin-bottom: 38px;
+      margin-bottom: 14px;
       display: block;
       overflow: hidden;
       white-space: nowrap;
